# QuantML

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  pipeline.yml
backend/: Dockerfile  README.md  config.py  main.py  mock_data.py  observability.py  requirements.txt  schemas.py
backend/backtesting/: __init__.py  costs.py  engine.py  metrics.py
backend/execution/: __init__.py  backtest.py  base.py  factory.py  live.py  paper.py
backend/portfolio/: __init__.py  risk_engine.py
backend/services/: backtest_service.py  replay_service.py  risk_service.py  store.py
data/: README.md
docs/: BACKEND.md  DEMO.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  (+6 more)
ml/: README.md  __init__.py  paths.py  pipeline.py  registry.py  requirements.txt  universe.py  validation.py
scripts/: README.md  dev.ps1  dev.sh  snapshot_api.py
tests/: conftest.py  test_ablation_tune.py  test_api.py  test_baselines.py  test_confidence.py  test_costs.py  test_drift.py  test_earnings.py  test_execution.py  test_features.py  test_labels.py  test_metrics.py  test_observability.py  test_online_learning.py  test_ood.py  test_pipeline.py  test_regime.py  test_regime_models.py  test_registry.py  test_risk_engine.py  test_rolling_window.py  test_trial_registry.py  test_validation.py  test_window_comparison.py
(+90 files in other folders)
